# PurpleCrew

./: .gitignore  EmulationSummary.md  FullSummaryReport.md  README.md  README.md\Y  crew-api.py  emulation.md  index.html  pyproject.toml  report.md  techniquesfound.md
db/: chroma.sqlite3
purplecrew/: main.py
purplecrew/crews/blueteamcrew/: blueteamcrew.py
purplecrew/crews/redteamcrew/config/: agents.yaml
purplecrew/db/: chroma.sqlite3
src/documents/: Calderaswaggerfile.json
src/purplecrew/: emulation.md  main.py  poem.txt  report.md  techniquesfound.md
src/purplecrew/crews/blueteamcrew/: blueteamcrew.py
src/purplecrew/crews/blueteamcrew/config/: agents.yaml  tasks.yaml
src/purplecrew/crews/itopscrew/: itopscrew.py
src/purplecrew/crews/itopscrew/config/: agents.yaml  tasks.yaml
src/purplecrew/crews/redteamcrew/: redteamcrew.py
src/purplecrew/crews/redteamcrew/config/: agents.yaml  tasks.yaml
src/purplecrew/db/: chroma.sqlite3
src/purplecrew/tools/: az_sentinel.py  caldera_tool.py  generate_analytic_rule.py  mitre_matrix_tool.py  mitre_pdf_extractor_tool.py  serper_check.py  summarize_abilities.py  terraform_tool.py
src/purplecrew/tools/templates/: EmulationReportSummary.html  Sentinel_Analytics_Template.json  main.tf.j2
